--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,4 @@
+
 * {
     padding: 0;
     margin: 0;
@@ -77,7 +78,8 @@ header .links .btn-outside {
 /* Main */
 .main {
     position: relative;
-    background-image: url(../imgs/main.jpg);
+    background-image: url("{% static 'imgs/main.jpg' %}");
+
     background-repeat: no-repeat;
     background-size: 100%;
     height: 100vh;
