--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -8,7 +8,7 @@
     <title>Task Mangement</title>
 
     <!-- CSS FILE -->
-    <link rel="stylesheet" href="{%static 'css/style.css'%}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <!-- Header-->
