style login&register 1.0.0

--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -5,20 +5,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task Management</title>
+    <title>Task Mangement</title>
 
     <!-- CSS FILE -->
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-    <!-- Header -->
+    <!-- Header-->
     <header class="header">
         <div class="header-cont">
             <nav class="navbar">
                 <div class="logo">
                     <h1>Task Manager</h1>
                     <ul>
+                        <li><a href="">Home</a></li>
                         <li><a href="{% url 'core:about' %}">About</a></li>
+                        <li><a href="">Services</a></li>
                     </ul>
                 </div>
             </nav>
