--- a/templates/tasks/manager_tasks.html
+++ b/templates/tasks/manager_tasks.html
@@ -9,6 +9,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+     <!-- this if for display error message like deleted success or faild and so on -->
+    {% if messages %}
+    <div class="messages">
+        {% for message in messages %}
+            <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+
+    
 
     <div class="dashboard-container">
         <!-- Header -->
