--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="{% static 'css/registerstyle.css' %}">
 </head>
 <body>
+    <!-- for system messages -->
+    {% if messages %}
+    <div class="messages">
+        {% for message in messages %}
+            <div class="alert {% if message.tags == 'error' %}alert-danger{% elif message.tags == 'success' %}alert-success{% endif %}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+
     <div class="outer-border"> <!-- الإطار الخارجي -->
         <div class="container">
             <!-- Signup Section -->
